--- a/BASIC/0707 수업.md
+++ b/BASIC/0707 수업.md
@@ -234,3 +234,45 @@ ex ) 전체 100개 항공기 지연여부 예측
 
 # **LECTURE03_비지도학습**
 
+## 1. 비지도학습
+
+![image-20200707154304279](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707154304279.png)
+
+## 2. 클러스터링
+
+ex ) 고객별 구매 상품 개수 데이터를 활용하여 유사한 고객 집단으로 세분화하고자 한다면 ? 
+
+![image-20200707154509843](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707154509843.png)
+
+![image-20200707154622831](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707154622831.png)
+
+![image-20200707154635756](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707154635756.png)
+
+여러 군데에 속할 수 있는 것이 sotf clustering이다.
+
+[군집 간 클러스터링]
+
+![image-20200707154703473](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707154703473.png)
+
+## 3. k-means Clustering
+
+![image-20200707154903624](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707154903624.png)
+
+k를 몇개로 설정하느냐에 따라서 군집 개수가 정해진다.
+
+![image-20200707155121673](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707155121673.png)
+
+변화가 없을 때 까지 중심을 옮겨가면서 군집화한다.
+
+![image-20200707155642051](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707155642051.png)
+
+## 4. Gaussian Mixture Model(GMM)
+
+:1 번 군집에도 들어가고 2번 군집에도 들어갈 수 있게 만들자
+
+![image-20200707155847275](C:\Users\박소희\AppData\Roaming\Typora\typora-user-images\image-20200707155847275.png)
+
+빨간색, 초록색, 보라색에 속할 확률을 각각 구함
+
+
+
