--- a/BASIC/0708 수업.md
+++ b/BASIC/0708 수업.md
@@ -1,6 +1,6 @@
 # 2-1. 머신러닝을 위한 선형대수학
 
-[1 ) 벡터](https://github.com/shp1204/AI-College/tree/master/BASIC/1-1 벡터.ipynb)
+[1 ) 벡터]([https://github.com/shp1204/AI-College/blob/master/BASIC/1-1%20%EB%B2%A1%ED%84%B0.ipynb](https://github.com/shp1204/AI-College/blob/master/BASIC/1-1 벡터.ipynb))
 
 ```
 스칼라 연산
