--- a/BASIC/0708 수업.md
+++ b/BASIC/0708 수업.md
@@ -1,6 +1,6 @@
 # 2-1. 머신러닝을 위한 선형대수학
 
-[1 ) 벡터]([https://github.com/shp1204/AI-College/blob/master/BASIC/1-1%20%EB%B2%A1%ED%84%B0.ipynb](https://github.com/shp1204/AI-College/blob/master/BASIC/1-1 벡터.ipynb))
+[1 ) 벡터]
 
 ```
 스칼라 연산
@@ -8,7 +8,7 @@
 정사영
 ```
 
-[2 ) 행렬](https://github.com/shp1204/AI-College/tree/master/BASIC/1-2 행렬.ipynb)
+[2 ) 행렬]
 
 ```
 행렬 연산
@@ -19,7 +19,7 @@
 # 역행렬이 존재하지 않을 수도 있다.
 ```
 
- [3 ) 벡터 공간과 차원](https://github.com/shp1204/AI-College/tree/master/BASIC/1-3 벡터 공간과 차원.ipynb)
+ [3 ) 벡터 공간과 차원]
 
 ```
 기저와 벡터공간
@@ -33,7 +33,7 @@ column spaces : 행렬의 column 벡터들로 만든 벡터 공간
 랭크와 null spaces의 관계 : 𝑛=𝑟𝑎𝑛𝑘(𝐴)+𝑛𝑢𝑙𝑙(𝐴)
 ```
 
-[4 ) 선형 변환과 고유값](http://localhost:8888/notebooks/Desktop/AI%20College/BASIC/1-4%20%EC%84%A0%ED%98%95%20%EB%B3%80%ED%99%98%EA%B3%BC%20%EA%B3%A0%EC%9C%A0%EA%B0%92.ipynb)
+[4 ) 선형 변환과 고유값]
 
 ```
 선형 변환
@@ -45,7 +45,7 @@ column spaces : 행렬의 column 벡터들로 만든 벡터 공간
 𝜆 는 변화한 크기 값을 의미하며 고유 값(eigen value)이라고 부릅니다.
 ```
 
-[5 ) 행렬 분해](http://localhost:8888/notebooks/Desktop/AI%20College/BASIC/1-5%20%ED%96%89%EB%A0%AC%20%EB%B6%84%ED%95%B4.ipynb)
+[5 ) 행렬 분해]
 
 ```
 행렬의 고유값 분해 : 𝐴=𝑉Λ𝑉−1
@@ -56,7 +56,7 @@ column spaces : 행렬의 column 벡터들로 만든 벡터 공간
 
 # 2-2. 머신러닝을 위한 미적분
 
-[1 ) 미분 기초](http://localhost:8888/notebooks/Desktop/AI%20College/BASIC/2-1%20%EB%AF%B8%EB%B6%84%20%EA%B8%B0%EC%B4%88.ipynb)
+[1 ) 미분 기초]
 
 ```
 미분 정의
@@ -64,7 +64,7 @@ column spaces : 행렬의 column 벡터들로 만든 벡터 공간
 미분 코딩하기 : Sympy 사용, 델타 사용
 ```
 
-[2 ) 편미분](http://localhost:8888/notebooks/Desktop/AI%20College/BASIC/2-2%20%ED%8E%B8%EB%AF%B8%EB%B6%84.ipynb)
+[2 ) 편미분]
 
 ```
 편미분
@@ -73,9 +73,9 @@ Gradient
 
 
 
-2-3. 머신러닝을 위한 확률과 통계
+# 2-3. 머신러닝을 위한 확률과 통계
 
-[1 ) 확률변수와 조건부 확률](http://localhost:8888/notebooks/Desktop/AI%20College/BASIC/3-1%20%ED%99%95%EB%A5%A0%20%EB%B3%80%EC%88%98%EC%99%80%20%EC%A1%B0%EA%B1%B4%EB%B6%80%20%ED%99%95%EB%A5%A0.ipynb)
+[1 ) 확률변수와 조건부 확률]
 
 ```
 확률, 확률변수
@@ -84,11 +84,40 @@ Gradient
 조건부 확률
 ```
 
-[2 ) 머신러닝을 위한 확률과 통계](http://localhost:8888/notebooks/Desktop/AI%20College/BASIC/3-2%20%ED%86%B5%EA%B3%84%20%EB%B6%84%EC%84%9D.ipynb)
+[2 ) 머신러닝을 위한 확률과 통계]
 
 ```
 평균
 표준편차
 상관계수
+```
+
+
+
+2-4. 탐색적 데이터 분석
+
+1 ) 데이터 확인
+
+2 ) 데이터 정제
+
+```
+결측값 처리
+이상치 처리
+```
+
+3 ) 특성 엔지니어링
+
+```
+스케일링(scaling) : 데이터분포 변환
+바이닝(bining) : 연속형 -> 범주형
+더미(dummy) : 범주형 -> 연속형
+```
+
+4 ) 상관 관계 분석
+
+```
+히스토그램 비교
+pairplot
+피어슨 상관 계수
 ```
 
