--- a/study/1st_movie/movie_modeling.ipynb
+++ b/study/1st_movie/movie_modeling.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:10.848142Z",
-     "start_time": "2020-07-12T18:12:10.811120Z"
+     "end_time": "2020-07-13T07:12:38.413356Z",
+     "start_time": "2020-07-13T07:12:38.387339Z"
     }
    },
    "outputs": [],
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:12.464291Z",
-     "start_time": "2020-07-12T18:12:12.434270Z"
+     "end_time": "2020-07-13T07:12:40.517849Z",
+     "start_time": "2020-07-13T07:12:40.459808Z"
     }
    },
    "outputs": [
@@ -132,7 +132,7 @@
        "box_off_num        1.000000  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,11 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:16.415098Z",
-     "start_time": "2020-07-12T18:12:16.406094Z"
+     "end_time": "2020-07-13T07:12:43.252794Z",
+     "start_time": "2020-07-13T07:12:43.241804Z"
     }
    },
    "outputs": [],
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:18.791789Z",
-     "start_time": "2020-07-12T18:12:18.776780Z"
+     "end_time": "2020-07-13T07:12:45.034059Z",
+     "start_time": "2020-07-13T07:12:45.018049Z"
     }
    },
    "outputs": [],
@@ -232,11 +232,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:24.185621Z",
-     "start_time": "2020-07-12T18:12:24.128584Z"
+     "end_time": "2020-07-13T07:12:48.196310Z",
+     "start_time": "2020-07-13T07:12:48.150275Z"
     }
    },
    "outputs": [],
@@ -269,11 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:40.828453Z",
-     "start_time": "2020-07-12T18:12:40.721373Z"
+     "end_time": "2020-07-13T07:12:51.480641Z",
+     "start_time": "2020-07-13T07:12:51.343547Z"
     },
     "scrolled": false
    },
@@ -648,7 +648,7 @@
        "[600 rows x 26 columns]"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,11 +669,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:12:47.904481Z",
-     "start_time": "2020-07-12T18:12:47.792419Z"
+     "end_time": "2020-07-13T07:12:56.286056Z",
+     "start_time": "2020-07-13T07:12:56.183001Z"
     },
     "scrolled": false
    },
@@ -1048,7 +1048,7 @@
        "[243 rows x 25 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,11 +1069,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-12T18:13:01.529162Z",
-     "start_time": "2020-07-12T18:13:01.446105Z"
+     "end_time": "2020-07-13T07:12:58.465606Z",
+     "start_time": "2020-07-13T07:12:58.376543Z"
     },
     "scrolled": true
    },
@@ -1896,7 +1896,7 @@
        "[26 rows x 26 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3140,7 +3140,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
