--- a/study/project/예시/01. Recommend system .ipynb
+++ b/study/project/예시/01. Recommend system .ipynb
@@ -20,7 +20,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 1. collaborative filtering_item based"
    ]
@@ -32,7 +34,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:19:41.297284Z",
      "start_time": "2020-07-20T20:19:41.205218Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -47,7 +50,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:19:41.452396Z",
      "start_time": "2020-07-20T20:19:41.371336Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -143,7 +147,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "사용자 - 영화에 따른 평점 점수가 데이터로 들어가야한다. 따라서 pivot table을 생성해보자."
    ]
@@ -156,6 +162,7 @@
      "end_time": "2020-07-20T20:19:43.903135Z",
      "start_time": "2020-07-20T20:19:42.966471Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -442,7 +449,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "이 두가지 중, 아이템 기반 협업 필터링을 위해 index = title, column = userId 의 df를 사용하자."
    ]
@@ -454,7 +463,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:19:46.653089Z",
      "start_time": "2020-07-20T20:19:46.397910Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -464,7 +474,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "유사한 아이템이라고 하면 평점이 비슷한 아이템이 될 수 있다. 현재 평점이 data로 들어가 있는 상태이므로, 이 상태에서 코사인 유사도를 구해보자."
    ]
@@ -477,6 +489,7 @@
      "end_time": "2020-07-20T19:50:39.673515Z",
      "start_time": "2020-07-20T19:50:36.121976Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -511,7 +524,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "이제 아이템별로 서로 유사한 정보의 값을 가지게 된다."
    ]
@@ -523,7 +538,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T19:51:59.338116Z",
      "start_time": "2020-07-20T19:51:59.274068Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -880,7 +896,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "자신과 일치하는 값은 유사도 값이 1로 나온다.\n",
     "1에 가까울 수록 유사도가 가까움을 의미한다.\n",
@@ -896,7 +914,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T19:53:31.918913Z",
      "start_time": "2020-07-20T19:53:31.913913Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -911,7 +930,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T19:53:50.561162Z",
      "start_time": "2020-07-20T19:53:50.530139Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -938,7 +958,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 2. collaborative filtering_Matrix Factorization based_latent factor\n",
     "\n",
@@ -947,7 +969,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "행렬 분해로 잠재요인을 끌어냈을 때의 장점 ? '저장 공간 절약'\n",
     "\n",
@@ -962,6 +986,7 @@
      "end_time": "2020-07-20T20:06:19.592505Z",
      "start_time": "2020-07-20T20:06:18.983072Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -978,7 +1003,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:12:16.335046Z",
      "start_time": "2020-07-20T20:12:16.327038Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -998,7 +1024,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "user-movie로 되어있는 pivot table을 movie-user로 바꿔주자.\n",
     "\n",
@@ -1012,7 +1040,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:06:21.676994Z",
      "start_time": "2020-07-20T20:06:21.660975Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1026,7 +1055,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:12:22.694565Z",
      "start_time": "2020-07-20T20:12:22.687559Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1046,7 +1076,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "SVD(Singular Value Decomposition), 특이값 분해를 적용해보자."
    ]
@@ -1058,7 +1090,9 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "![image.png](attachment:image.png)"
    ]
@@ -1070,7 +1104,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:03:28.068603Z",
      "start_time": "2020-07-20T20:03:28.064598Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1085,6 +1120,7 @@
      "end_time": "2020-07-20T20:06:28.458805Z",
      "start_time": "2020-07-20T20:06:27.960452Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -1095,7 +1131,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "n_components = 12로 설정하면서 9064개의 영화 데이터가 12개의 어떤 요소의 값을 갖게 된다.\n",
     "\n",
@@ -1110,6 +1148,7 @@
      "end_time": "2020-07-20T20:07:49.540431Z",
      "start_time": "2020-07-20T20:07:43.463116Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1131,7 +1170,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "이 상관관계 중에서 '특정 영화'와 관련하여 상관계수가 높은 영화를 뽑아주면 된다."
    ]
@@ -1143,7 +1184,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:10:32.440207Z",
      "start_time": "2020-07-20T20:10:32.432203Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1159,7 +1201,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-20T20:15:32.979803Z",
      "start_time": "2020-07-20T20:15:32.952783Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1189,14 +1232,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "이 모델은 사용자가 본 history를 생각하지 않은 결과이기 때문에 사용자에게 추천하기 부족하다."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 3. 사용자 history기반 추천"
    ]
@@ -1208,7 +1255,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T03:44:15.818926Z",
      "start_time": "2020-07-22T03:44:15.503702Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1225,7 +1273,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T03:44:17.592190Z",
      "start_time": "2020-07-22T03:44:17.572176Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1251,7 +1300,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T03:44:33.156280Z",
      "start_time": "2020-07-22T03:44:33.055210Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1281,6 +1331,7 @@
      "end_time": "2020-07-22T03:44:44.916660Z",
      "start_time": "2020-07-22T03:44:44.842613Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1491,7 +1542,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "이제 SVD, 특이값 행렬 분해를 통해 latent factor matrix factorization을 진행해보자.\n",
     "\n",
@@ -1505,7 +1558,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T03:46:44.871129Z",
      "start_time": "2020-07-22T03:46:43.323030Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1520,6 +1574,7 @@
      "end_time": "2020-07-22T03:46:51.713004Z",
      "start_time": "2020-07-22T03:46:50.883413Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1538,7 +1593,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "위와 같이 진행한다면, sigma가 포함된 행렬은 0이 아닌 값만 1차원 행렬로 표현된 상태이다. 따라서 0이 포함된 대칭행렬로 변환할 때는 numpy의 diag를 이용하자."
    ]
@@ -1550,7 +1607,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T03:49:35.113432Z",
      "start_time": "2020-07-22T03:49:35.105428Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -1571,7 +1629,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "SVD를 적용해 분해한 상태이므로, 다시 원본 행렬로 복구시키자.\n",
     "\n",
@@ -1592,6 +1652,7 @@
      "end_time": "2020-07-22T03:49:38.600916Z",
      "start_time": "2020-07-22T03:49:38.363746Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -1803,7 +1864,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "함수 생성\n",
     "\n",
@@ -1820,7 +1883,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T04:09:33.354200Z",
      "start_time": "2020-07-22T04:09:33.339188Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -1871,7 +1935,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T04:09:35.453696Z",
      "start_time": "2020-07-22T04:09:35.252553Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2664,7 +2729,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-21T02:57:04.516478Z",
      "start_time": "2020-07-21T02:57:04.495461Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2772,7 +2838,8 @@
     "ExecuteTime": {
      "end_time": "2020-07-22T04:16:32.094559Z",
      "start_time": "2020-07-22T04:16:32.074546Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -2897,7 +2964,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
