--- a/study/project/추천모델.md
+++ b/study/project/추천모델.md
@@ -71,3 +71,48 @@ Task와 Data 구조에 맞게 적절한 DL 모델을 변형, 적용합니다.
 참고 : https://www.facebook.com/groups/2611614312273351/permalink/2662015087233273
 
 [https://kutar37.tistory.com/entry/%ED%8C%8C%EC%9D%B4%EC%8D%AC-%ED%98%91%EC%97%85%ED%95%84%ED%84%B0%EB%A7%81Collaborative-Filtering-%EC%B6%94%EC%B2%9C-%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-1](https://kutar37.tistory.com/entry/파이썬-협업필터링Collaborative-Filtering-추천-알고리즘-1)
+
+----------
+
+content vs item
+
+collaborative : 함축적 행동을 갖고 추천, 영역의 구애 x, profile 자체에 편향이 생길 수 있기 때문에 좋은 성향 but cold start problem 
+
+- neighborhood : 아이템-user
+
+  
+
+MF : SVD 가 missing value에 약하기 때문에 ( 새로운 장르를 인지하지 못함 / 유저가 평가하지 않은 경우 ) regulization modeling으로 한다. probabilitic matrix factorization을 진행하고있따.
+
+explicit vs implicit
+
+-------
+
+MAB : https://sumniya.tistory.com/9
+
+강화학습에 많이 사용되고, A/B 테스트보다 좋음
+
+exploitation : 경험에 의존
+
+exploration : 도전
+
+regret  (error) : 내가 기대한 것 - 실제 결과
+
+```
+* greedy : 지금 당장 내가 많이 벌 수 있는 것 ( 경험적으로 )
+=> 문제 : exploration을 고려할 수 없음
+
+* e-greedy : (1 - ε)의 확률로 기존에 관측한 값을 중 가장 좋은 머신을 선택
+=> exploration, exploitation 둘 다 고려함
+=> 문제 : 시행이 반복되면 optimal 한 값으로 수렴하고, 이때 문제 발생
+
+* UCB : 초반에는 exploration에 가중치를 많이 두고, 많이 수행할 수록 exploitation에 가중치를 많이 두게 된다
+=> 시간이 지나면 경험적인 데이터에 많이 영향 줌 ㅇㅇ
+=> 많이 안돌리면 안 좋아
+
+--- UCB 까지는 cold start problem 이 존재한다 ---
+
+* Thompson Sampling
+
+```
+
