--- a/study/1st_movie/movie_PSH.ipynb
+++ b/study/1st_movie/movie_PSH.ipynb
@@ -4179,9 +4179,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## sklearn_RandomForestRegressor \n",
     "+ RMSE + Hyper Parameter Tuning\n",
@@ -4202,8 +4200,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T02:06:41.386967Z",
      "start_time": "2020-07-16T02:06:40.438277Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -4223,8 +4220,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T03:10:30.791253Z",
      "start_time": "2020-07-16T02:06:59.103543Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4536,8 +4532,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T04:19:23.455373Z",
      "start_time": "2020-07-16T03:10:31.209549Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4830,8 +4825,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T04:19:24.155873Z",
      "start_time": "2020-07-16T04:19:24.134856Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4859,8 +4853,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T04:19:25.296682Z",
      "start_time": "2020-07-16T04:19:25.262658Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4900,8 +4893,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T04:19:45.200828Z",
      "start_time": "2020-07-16T04:19:26.075236Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [
     {
@@ -4933,8 +4925,7 @@
     "ExecuteTime": {
      "end_time": "2020-07-16T04:19:47.610541Z",
      "start_time": "2020-07-16T04:19:46.268587Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -4949,7 +4940,6 @@
      "end_time": "2020-07-16T04:19:48.481161Z",
      "start_time": "2020-07-16T04:19:48.466149Z"
     },
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -5051,8 +5041,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### 최적의 cv 찾기\n",
@@ -5919,7 +5908,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
