--- a/08. 딥러닝/이미지 딥러닝/A01_MNIST_noTensorflow(answer).ipynb
+++ b/08. 딥러닝/이미지 딥러닝/A01_MNIST_noTensorflow(answer).ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "B01_MNIST_noTensorflow.ipynb",
+      "name": "A01_MNIST_noTensorflow.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "toc_visible": true
     },
     "kernelspec": {
@@ -81,7 +80,10 @@
         "t_trainlbl, t_testlbl = t_train, t_test\n",
         "\n",
         "# 28X28 을 784 로 변환\n",
-        "# TODO \n"
+        "# x_train = x_train.reshape(60000,784)    # 28*28 을 784로 변환\n",
+        "# x_test = x_test.reshape(10000,784)    \n",
+        "x_train = x_train.reshape(-1,784)    # 28*28 을 784로 변환\n",
+        "x_test = x_test.reshape(-1,784)    \n"
       ],
       "execution_count": null,
       "outputs": []
@@ -192,10 +194,10 @@
         "    while not it.finished:\n",
         "        index = it.multi_index\n",
         "        tmp = float(x[index])\n",
-        "        # TODO\n",
-        "\n",
-        "\n",
-        "\n",
+        "        x[index] = tmp + h\n",
+        "        fxh2 = f()    # f(x+h)\n",
+        "        x[index] = tmp - h \n",
+        "        fxh1 = f()    # f(x-h)\n",
         "        nd_coef[index] = (fxh2 - fxh1) / (2*h)\n",
         "        x[index] = tmp \n",
         "        it.iternext()\n",
