--- a/08. 딥러닝/이미지 딥러닝/A02_mnist_keras_demo(answer).ipynb
+++ b/08. 딥러닝/이미지 딥러닝/A02_mnist_keras_demo(answer).ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "B02_mnist_keras_demo.ipynb",
+      "name": "A02_mnist_keras_demo.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -98,11 +99,7 @@
       "metadata": {
         "id": "qGWU58qdZAp6",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 52
-        },
-        "outputId": "96f79919-692f-412a-aeb3-0179afc008ce"
+        "colab": {}
       },
       "source": [
         "mnist = tf.keras.datasets.mnist\n",
@@ -110,16 +107,7 @@
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -130,7 +118,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "f56d8797-3fec-438a-f6aa-3aa116e35c80"
+        "outputId": "48b6b863-3f54-41ea-9abc-46b8f69a4d3d"
       },
       "source": [
         "x_train.min(), x_train.max()"
@@ -147,7 +135,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 14
         }
       ]
     },
@@ -173,7 +161,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "0deca442-db83-4077-8979-8cff6fea559d"
+        "outputId": "22758d81-6a00-44ae-d3b2-d4c577327f0b"
       },
       "source": [
         "x_train.min(), x_train.max()"
@@ -190,7 +178,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 16
         }
       ]
     },
@@ -203,7 +191,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "17820df2-59bb-4684-c100-7b0b4cf68b7f"
+        "outputId": "bbe4bed9-3d9b-439a-b1fb-6a4c02637c4d"
       },
       "source": [
         "x_train.shape"
@@ -220,7 +208,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 17
         }
       ]
     },
@@ -257,7 +245,7 @@
       },
       "source": [
         "model = tf.keras.models.Sequential([\n",
-        "  tf.keras.layers.Flatten(input_shape=(28,28)),\n",
+        "  tf.keras.layers.Flatten(input_shape=(28, 28)),\n",
         "  tf.keras.layers.Dense(128, activation='relu'),\n",
         "  tf.keras.layers.Dense(10, activation='softmax')\n",
         "])"
@@ -307,9 +295,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 389
+          "height": 403
         },
-        "outputId": "76b3b52b-84d5-4682-bbfc-2f09f36f7357"
+        "outputId": "a65be756-6e7e-48b0-8a05-e2427332b0a7"
       },
       "source": [
         "model.fit(x_train, y_train, epochs=10)"
@@ -320,25 +308,25 @@
           "output_type": "stream",
           "text": [
             "Epoch 1/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.2561 - accuracy: 0.9273\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0148 - accuracy: 0.9952\n",
             "Epoch 2/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.1114 - accuracy: 0.9672\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0120 - accuracy: 0.9964\n",
             "Epoch 3/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0783 - accuracy: 0.9760\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0113 - accuracy: 0.9964\n",
             "Epoch 4/10\n",
-            "1875/1875 [==============================] - 5s 2ms/step - loss: 0.0594 - accuracy: 0.9815\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0083 - accuracy: 0.9973\n",
             "Epoch 5/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0467 - accuracy: 0.9856\n",
+            "1875/1875 [==============================] - 5s 2ms/step - loss: 0.0108 - accuracy: 0.9966\n",
             "Epoch 6/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0368 - accuracy: 0.9886\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0063 - accuracy: 0.9981\n",
             "Epoch 7/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0293 - accuracy: 0.9909\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0076 - accuracy: 0.9976\n",
             "Epoch 8/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0237 - accuracy: 0.9927\n",
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0050 - accuracy: 0.9987\n",
             "Epoch 9/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0200 - accuracy: 0.9935\n",
+            "1875/1875 [==============================] - 5s 3ms/step - loss: 0.0055 - accuracy: 0.9983\n",
             "Epoch 10/10\n",
-            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0160 - accuracy: 0.9953\n"
+            "1875/1875 [==============================] - 4s 2ms/step - loss: 0.0054 - accuracy: 0.9982\n"
           ],
           "name": "stdout"
         },
@@ -346,13 +334,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f8d20751a90>"
+              "<tensorflow.python.keras.callbacks.History at 0x7f4a2e1111d0>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 19
         }
       ]
     },
@@ -373,9 +361,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 54
         },
-        "outputId": "e14955bc-2741-4797-cc41-ec6e6f88be7f"
+        "outputId": "8bfd2d4a-188a-4a09-ad7b-4e33cd2a2a3f"
       },
       "source": [
         "model.evaluate(x_test,  y_test, verbose=2)"
@@ -385,7 +373,7 @@
         {
           "output_type": "stream",
           "text": [
-            "313/313 - 1s - loss: 0.0836 - accuracy: 0.9778\n"
+            "313/313 - 1s - loss: 0.0794 - accuracy: 0.9772\n"
           ],
           "name": "stdout"
         },
@@ -393,13 +381,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.08357472717761993, 0.9778000116348267]"
+              "[0.07937842607498169, 0.9771999716758728]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 9
         }
       ]
     }
