--- a/08. 딥러닝/Lecture 10-1. 텐서플로우 (Answer).ipynb
+++ b/08. 딥러닝/Lecture 10-1. 텐서플로우 (Answer).ipynb
@@ -1217,7 +1217,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2378,7 +2380,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "260.797px"
+    "width": "260.795px"
    },
    "toc_section_display": true,
    "toc_window_display": true
