--- a/Project/자료조사.md
+++ b/Project/자료조사.md
@@ -122,3 +122,8 @@ ex ) 최화정쇼, 강주은의 굿라이프, 동가게, 힛더스타일 등등
 * 휴일의 지속기간
 * 일주일을 168개의 시간으로 쪼개서 범주화한 시간변수 ( 일주일을 통으로 측정)
 * 프라임 시간대를 요일별로 나눈 프라임 범주형 변수 ( 월수금 한묶음, 나머지)
+* 브랜드 파워 ( 방송 내에서 몇 개의 제품을 판매하는지 ) : 방송길이 / 제품수
+
+## 생각해볼 것
+
+구매시간대 , 구매상품군, 구매단가, 재구매율 / 우수고객비율(이건 안나옴)
