--- a/08. 딥러닝/자연어 처리/자연어처리를위한딥러닝1_실습.ipynb
+++ b/08. 딥러닝/자연어 처리/자연어처리를위한딥러닝1_실습.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T07:29:20.187544Z",
-     "start_time": "2020-07-27T07:29:20.172518Z"
+     "end_time": "2020-08-12T14:35:18.574058Z",
+     "start_time": "2020-08-12T14:35:15.821085Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T07:29:20.834988Z",
-     "start_time": "2020-07-27T07:29:20.828984Z"
+     "end_time": "2020-08-12T14:35:19.445661Z",
+     "start_time": "2020-08-12T14:35:19.424650Z"
     }
    },
    "outputs": [
@@ -38,7 +38,7 @@
        "(300, 6)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T07:33:04.286201Z",
-     "start_time": "2020-07-27T07:33:04.281197Z"
+     "end_time": "2020-08-12T14:35:25.432937Z",
+     "start_time": "2020-08-12T14:35:23.217344Z"
     }
    },
    "outputs": [],
@@ -298,11 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T07:33:50.613209Z",
-     "start_time": "2020-07-27T07:33:50.606203Z"
+     "end_time": "2020-08-12T14:35:27.153148Z",
+     "start_time": "2020-08-12T14:35:27.138132Z"
     }
    },
    "outputs": [],
@@ -313,11 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T07:33:53.428215Z",
-     "start_time": "2020-07-27T07:33:53.422229Z"
+     "end_time": "2020-08-12T14:35:28.718257Z",
+     "start_time": "2020-08-12T14:35:28.713258Z"
     }
    },
    "outputs": [],
@@ -328,11 +328,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-07-27T07:37:07.706642Z",
-     "start_time": "2020-07-27T07:37:07.700639Z"
+     "end_time": "2020-08-12T14:35:29.920112Z",
+     "start_time": "2020-08-12T14:35:29.913125Z"
     }
    },
    "outputs": [
@@ -342,7 +342,7 @@
        "'자사고 외고 폐지 제발 하지 말아주세요저는 2018년도 상산고등학교에 합격한 한 학생입니다  합격하고 나니 자사고외고에 대한 말이 많던데  이는 자사고와 외고를 폐지하려고 한단 말이었습니다  저는 이 말을 듣고 너무 어이가 없었습니다  제가 학생으로서 열심히 공부해서 제가 가고 싶은 고등학교에  깄을 뿐인데 이런 불안감을 가져야한다는게 너무 억울합니다  일반고와의 차별성 때문이라는 말도 있는데  일반고을 상향할 수도 있는데 왜 굳이 멀쩡한 자사고와 외고를  하향하시려 합니까  차별성은 예고와 과학고에게도 마찬가지로 느끼는데 자사고와 외고에게만  이러는 것은 옳지 않다고 생각합니다  또 공약을 지키기 위해서라고 하시는데  저는 이때까지 계속 스스로 공부했습니다  학원도 다니지 않았습니다  그런데 저에게 결정권 즉 투표권도 주지 않았으면서  이런 결정을 내리시면 제가 뭐가 됩니까  학생이 공부 잘해서 손해 보는 느낌이 들면  뭐하러 학생들 보고 공부 하라 합니까'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3140,7 +3140,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
